# wlrsetroot

./: .gitignore  README.md  flake.nix  meson.build
include/: pool-buffer.h  xbm.h
src/: main.c  pool-buffer.c  xbm.c
